--- a/유방암_데이터분석.ipynb
+++ b/유방암_데이터분석.ipynb
@@ -1739,7 +1739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1749,20 +1749,12 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/chahyeon-yeong/miniconda3/lib/python3.11/site-packages/sklearn/svm/_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
               "0.9590643274853801"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1771,7 +1763,7 @@
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "model = LinearSVC()\n",
+        "model = LinearSVC(dual='auto')\n",
         "\n",
         "model.fit(X_train, y_train)\n",
         "y_pred = model.predict(X_test)\n",
